# reaXLand

./: .gitignore  README.md
.github/workflows/: tests.yml
backend/: pyproject.toml
backend/reaxland/: __init__.py
backend/reaxland/property/models/: base_model.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx
frontend/src/pages/: Contact.jsx  Problem.jsx  Solution.jsx
src/reaxland/: env.py
src/reaxland/property/: base.py
src/reaxland/property/models/: base_model.py  zoopla_england.py
tests/: test_env.py
