[project]
name = "reaxland"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.19.0",
    "gymnasium>=1.0.0",
    "numpy>=2.2.3",
    "pettingzoo>=1.24.3",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.9.6"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    # "D",    # Enable pydocstyle checks
    "F401", # Remove unused imports
    "UP",   # pyupgrade: rewrite old syntax
]
extend-select = ["I"] # Isort imports

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PettingZoo appears to provide types
# But not py.typed file
[[tool.mypy.overrides]]
module = ["pettingzoo.*"]
follow_untyped_imports = true

# PettingZoo: ParallelEnv, testing_api, etc. not explitly exported
# Even though these are public documented APIs
[tool.mypy]
disable_error_code = ["attr-defined"]
